tests/NormalTests/paczka1/small_fuzzy/25883597.err
Error in line 9: KUGBoCt5h S315 76,5
Error in line 8: HECbx4XWXO S948 70,5
